flask app #3 - added navigation links

--- a/3155Activities/flask_app/templates/index.html
+++ b/3155Activities/flask_app/templates/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+    <nav>
+        <a href="{{url_for('index')}}" > Home </a> ||
+        <a href="{{url_for('get_notes')}}" > My Notes </a>
+    </nav>
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,5 +24,6 @@
 
         <h3>Work notes</h3>
 
+        <nav> <a href="/notes"> My notes </a> </nav>
     </body>
 </html>
