--- a/3155Activities/flask_app/templates/note.html
+++ b/3155Activities/flask_app/templates/note.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
     </head>
     <body>
+        <h1>Welcome {{ user.name }} to the 49er Notes App!</h1>
         <h1>Note detials</h1>
 
         <table>
