--- a/3155Activities/flask_app/templates/notes.html
+++ b/3155Activities/flask_app/templates/notes.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <nav>
         <a href="{{url_for('index')}}" > Home </a> ||
-        <a href="{{url_for('get_notes')}}" > My Notes </a>
+        <a href="{{url_for('get_notes')}}" > My Notes </a> ||
+        <a href="{{url_for('new_note')}}" > Add Notes </a>
     </nav>
     <head>
         <meta charset="utf-8">
@@ -21,10 +22,10 @@
                 <th>Title</th>
                 <th>Date</th>
             </tr>
-            {% for key, value in notes.items() %}
+            {% for note in notes %}
             <tr>
-                <td><a href = "notes/{{key}}">{{ value.title }}</a></td>
-                <td>{{ value.date }}</td>
+                <td><a href = "{{url_for('get_note', note_id=note.id) }}">{{ note.title }}</a></td>
+                <td>{{ note.date }}</td>
             </tr>
             {% endfor %}
         </table>
